main - fixed scrollbar issue - ib

--- a/app/components/gifPrompt/gifPrompt.module.scss
+++ b/app/components/gifPrompt/gifPrompt.module.scss
@@ -2,11 +2,17 @@
     display: flex;
     flex-direction: row;
     position: sticky;
-    // height: 12em;
     max-height: 12em;
     flex-wrap: wrap;
     overflow: scroll;
     flex-basis: 25%;
+
+    // Removing visual scroll bars from the gif prompt, functionality still intact
+    &::-webkit-scrollbar {
+        display: none; /* Chrome */
+    }
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
     
     @media (prefers-color-scheme: dark) {
         background-color: $dark-blue;
